# ridgeback

./: README.md  rosinstall
.github/: CODEOWNERS
mecanum_gazebo_plugin/: CHANGELOG.rst  package.xml
ridgeback_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_base/src/: ridgeback_base.cpp  ridgeback_cooling.cpp  ridgeback_diagnostic_updater.cpp
ridgeback_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_bringup/launch/: accessories.launch
ridgeback_bringup/scripts/: can-udp-bridge.conf  install
ridgeback_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_control/config/: control.yaml  teleop.yaml  teleop_ps3.yaml  teleop_ps4.yaml
ridgeback_control/include/mecanum_drive_controller/: mecanum_drive_controller.h
ridgeback_control/launch/: control.launch  teleop.launch
ridgeback_control/src/: mecanum_drive_controller.cpp
ridgeback_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ridgeback_description/launch/: description.launch
ridgeback_description/meshes/: 3dm-gxX.stl  axle.stl  body.stl  end-cover.stl  rocker.stl  top.stl  ust-10lx.stl  wheel.stl
ridgeback_description/urdf/: accessories.urdf.xacro  empty.urdf  ridgeback.gazebo  ridgeback.urdf.xacro  ridgeback.urdf.xacro~
ridgeback_description/urdf/accessories/: bridge_plate.urdf.xacro  hokuyo_ust-10lx_mount.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx.urdf.xacro  sick_lms1xx_mount.urdf.xacro  sick_s300_mount.urdf.xacro
ridgeback_description/urdf/configs/: base  dual_laser  front_laser  rear_laser
ridgeback_desktop/: CHANGELOG.rst  package.xml
ridgeback_gazebo/: CHANGELOG.rst  package.xml
ridgeback_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_msgs/msg/: Drive.msg  Fans.msg  Feedback.msg  Status.msg
ridgeback_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
ridgeback_navigation/launch/include/: amcl.launch
ridgeback_navigation/params/: costmap_common_params.yaml
ridgeback_robot/: CHANGELOG.rst  package.xml
ridgeback_simulator/: CHANGELOG.rst  package.xml
ridgeback_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_viz/launch/: view_model.launch  view_robot.launch
ridgeback_viz/rviz/: gmapping.rviz  navigation.rviz  robot.rviz
