<?xml version="1.0"?>
<package>
  <name>ridgeback_bringup</name>
  <version>0.1.7</version>
  <description>Scripts for installing Ridgeback's robot software.</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Ridgeback</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>cob_sick_s300</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>ridgeback_base</run_depend>
  <run_depend version_gte="0.1.1">robot_upstart</run_depend>
  <run_depend>urg_node</run_depend>

  <export>
  </export>
</package>
